ISPN-15045 Group-only role mapping by default